--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,7 +23,7 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "method-override": "^3.0.0",
+    "mailersend": "^2.6.0",
     "mongoose": "^8.18.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
