--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,18 +16,15 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.1.0",
-    "express-session": "^1.18.2",
-    "express-validator": "^7.2.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
-    "mailersend": "^2.6.0",
     "mongoose": "^8.18.3",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "slugify": "^1.6.6"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "morgan": "^1.10.1",
